Added Label.For() support

--- a/Rubberduck.Winforms.DataAnnotations/Rubberduck.Winforms.DataAnnotations.csproj
+++ b/Rubberduck.Winforms.DataAnnotations/Rubberduck.Winforms.DataAnnotations.csproj
@@ -45,6 +45,9 @@
     <Compile Include="ErrorLabel.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Label.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="ModelBoundForm.cs">
       <SubType>Form</SubType>
     </Compile>
