--- a/Rubberduck.Winforms.DataAnnotations/Rubberduck.Winforms.DataAnnotations.csproj
+++ b/Rubberduck.Winforms.DataAnnotations/Rubberduck.Winforms.DataAnnotations.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Alignment.cs" />
     <Compile Include="ErrorLabel.cs">
       <SubType>Component</SubType>
     </Compile>
