--- a/Rubberduck.Winforms/Rubberduck.Winforms.csproj
+++ b/Rubberduck.Winforms/Rubberduck.Winforms.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{6D126E23-B24E-48A5-98A9-C3A006D93DF9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Rubberduck.Winforms.DataAnnotations</RootNamespace>
-    <AssemblyName>Rubberduck.Winforms.DataAnnotations</AssemblyName>
+    <RootNamespace>Rubberduck.Winforms</RootNamespace>
+    <AssemblyName>Rubberduck.Winforms</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -37,7 +37,6 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
