--- a/Rubberduck.Winforms/Rubberduck.Winforms.csproj
+++ b/Rubberduck.Winforms/Rubberduck.Winforms.csproj
@@ -62,6 +62,9 @@
       <DependentUpon>ModelBoundForm.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Rubberduck.Winforms.nuspec" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
