Rudimentary ICommand support.

--- a/Rubberduck.Winforms/Rubberduck.Winforms.csproj
+++ b/Rubberduck.Winforms/Rubberduck.Winforms.csproj
@@ -30,6 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -42,6 +43,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Alignment.cs" />
+    <Compile Include="CommandButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="ErrorLabel.cs">
       <SubType>Component</SubType>
     </Compile>
